<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundView"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="203dp"
        android:layout_height="144dp"
        android:contentDescription="@string/imagenHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/klipartz_com" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="408dp"
        android:layout_height="55dp"
        android:autoText="false"
        android:fontFamily="monospace"
        android:outlineAmbientShadowColor="#801919"
        android:outlineSpotShadowColor="#FDFDFD"
        android:shadowColor="#B8CA05"
        android:shadowDx="8"
        android:shadowDy="6"
        android:shadowRadius="12"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/titleColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234"
        tools:ignore="Deprecated,TextSizeCheck,TextViewEdits" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/subtitle"
        android:textColor="@color/subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299" />

    <EditText
        android:id="@+id/branch"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/branch"
        android:inputType="text"
        android:textColor="@color/titleColor"
        android:textColorHint="@color/textHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <EditText
        android:id="@+id/model"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/model"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/textHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <EditText
        android:id="@+id/color"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/color"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/textHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="256dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/backgroundbutton"
        android:fontFamily="monospace"
        android:onClick="sendData"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="12"
        android:text="@string/btnText"
        android:textColor="@color/BackgroundView"
        android:textColorLink="#FFFFFF"
        android:textFontWeight="700"
        android:textSize="16sp"
        app:icon="@android:drawable/ic_menu_search"
        app:iconGravity="end"
        app:iconPadding="12dp"
        app:iconSize="20dp"
        app:iconTint="#090909"
        app:iconTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719" />

    <TextView
        android:id="@+id/searchResult"
        android:layout_width="300dp"
        android:layout_height="144dp"
        android:fontFamily="monospace"
        android:text="@string/searchResult"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971"
        tools:ignore="TextContrastCheck,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>